--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
-SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/user_db
+SPRING_DATASOURCE_URL=jdbc:postgresql://dpg-d4bpd4mr433s73d34dlg-a.frankfurt-postgres.render.com:5432/user_db_g5uu
 SPRING_DATASOURCE_USERNAME=user
-SPRING_DATASOURCE_PASSWORD=password
+SPRING_DATASOURCE_PASSWORD=iBJ3sTcaR0DSOdaxg3CvRKr9bBpAY77M
+SPRING_PROFILES_ACTIVE=prod
 
 POSTGRES_DB=user_db
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 
-SPRING_PROFILES_ACTIVE=dev
+SPRING_PROFILES_ACTIVE=prod
