--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -21,9 +21,8 @@ logging:
     org.hibernate.type: OFF
 
 server:
-  error:
-    include-message: never
-    include-stacktrace: never
+  address: 0.0.0.0
+  port: ${PORT:8080}
 
 management:
   endpoints:
