--- a/.github.workflows/ci-cd.yaml
+++ b/.github.workflows/ci-cd.yaml
@@ -3,10 +3,10 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - master
+      - ["master"]
   pull_request:
     branches:
-      - "**"
+      - ["master"]
 
 jobs:
   build-test:
@@ -43,7 +43,7 @@ jobs:
     name: Deploy to Railway
     runs-on: ubuntu-latest
     needs: build-test
-    if: github.ref == 'refs/heads/master'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
 
     steps:
       - name: Checkout repository
