--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,9 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches:
-      - ["master"]
+    branches: ["master"]
   pull_request:
-    branches:
-      - ["master"]
+    branches: ["master"]
 
 jobs:
   build-test:
@@ -45,14 +43,14 @@ jobs:
     needs: build-test
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
 
+    container:
+      image: ghcr.io/railwayapp/cli:latest
+    env:
+      SVC_ID: abundant-adaptation
+      RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Railway CLI
-        uses: railwayapp/cli-action@v1
-        with:
-          railwayToken: ${{ secrets.RAILWAY_API_TOKEN }}
-          project: ${{ secrets.RAILWAY_PROJECT_ID }}
-          branch: master
-          run: deploy
+      - name: Deploy
+        run: railway up --service=${{ env.SVC_ID }}
