--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,12 @@ jobs:
       - name: Build JAR
         run: ./gradlew bootJar -x test
 
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v5
+        with:
+          name: app-jar
+          path: build/libs/*.jar
+
       - name: Run tests
         run: ./gradlew test
 
