--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,4 @@ jobs:
           path: build/libs
 
       - name: Deploy
-        run: |
-          railway up --service=${{ env.SVC_ID }} \
-          --env SPRING_PROFILES_ACTIVE=prod
+        run: railway up --service=${{ env.SVC_ID }}
