--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  app:
+  user-management-service:
     build:
       context: .
       dockerfile: Dockerfile
@@ -7,6 +7,7 @@ services:
       - "8080:8080"
     env_file:
       - .env
+    profiles: ["dev"]
     depends_on:
       - db
     healthcheck:
@@ -23,6 +24,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    profiles: ["dev"]
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 5s
