profile config added.

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ SPRING_DATASOURCE_USERNAME=user
 SPRING_DATASOURCE_PASSWORD=iBJ3sTcaR0DSOdaxg3CvRKr9bBpAY77M
 SPRING_PROFILES_ACTIVE=prod
 
+POSTGRES_URL=jdbc:postgresql://db:5432/user_db
 POSTGRES_DB=user_db
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
